mealie-service-manifests/mealie-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy: {}
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v1.3.2
        name: mealie
        ports:
          - containerPort: 9000
        volumeMounts:
          - mountPath: /app/data
            name: mealie-vol
      volumes:
        - name: mealie-vol
          persistentVolumeClaim:
            claimName: mealie-data
