mealie-service-manifests/mealie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mealie.devops.com
    http:
      paths:
      - backend:
          service:
            name: mealie
            port:
              number: 9000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
